feat: delete mentions and t.me/ links